# sbitx_screen

./: .gitignore  CMakeLists.txt  console.c  console.h  copy libraries.txt  debug.c  debug.h  display.c  display.h  fft.c  fft_filter.c  global_string.c  global_string.h  hardware.c  hardware.h  i2cbb.c  i2cbb.h  init_radio_setup.c  main.c  main.css  queue.c  queue.h  radio.c  radio.h  radio_state.c  radio_state.h  readme.md  rotary.c  rotary.h  sbitx_screen.code-workspace  sbitx_screen.glade  sbitx_sdr.c  sbitx_sound.c  sdr.h  settings.h  si5351.c  si5351.h  sound.h  texts.c  texts.h  (+7 more)
tmate2/: bitfields.h  layout.h  main_layout.c  smeter_layout.c  tmate2.c  tmate2.h
